--- a/site/404.html
+++ b/site/404.html
@@ -38,7 +38,7 @@
                                 <a href="/." class="nav-link">首页</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/%E7%AE%97%E5%AD%90%E6%8A%80%E6%9C%AF%E6%96%87%E6%A1%A3/" class="nav-link">测试页</a>
+                                <a href="/test/" class="nav-link">测试页</a>
                             </li>
                         </ul>
 
