--- a/site/index.html
+++ b/site/index.html
@@ -38,7 +38,7 @@
                                 <a href="." class="nav-link active" aria-current="page">首页</a>
                             </li>
                             <li class="nav-item">
-                                <a href="%E7%AE%97%E5%AD%90%E6%8A%80%E6%9C%AF%E6%96%87%E6%A1%A3/" class="nav-link">测试页</a>
+                                <a href="test/" class="nav-link">测试页</a>
                             </li>
                         </ul>
 
@@ -54,7 +54,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a rel="next" href="%E7%AE%97%E5%AD%90%E6%8A%80%E6%9C%AF%E6%96%87%E6%A1%A3/" class="nav-link">
+                                <a rel="next" href="test/" class="nav-link">
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
                             </li>
@@ -194,5 +194,5 @@ docs/
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2024-11-25 07:14:43.489194+00:00
+Build Date UTC : 2024-11-25 07:39:11.596429+00:00
 -->
